# playground-tracing

./: .gitignore  README.md
data-service/: dataserver.py  requirements.txt  serve.sh  settings_sample.yaml
docker/: README.md  docker-compose.yml  filebeat.yml  up.sh  wipe.sh
frontend/: cabal.project.freeze  frontend.cabal  go.sh
frontend/app/: Main.hs
