cabal-version:      2.4
name:               frontend
version:            0.1.0.0

author:             Carlo Hamalainen
maintainer:         carlo@carlo-hamalainen.net

extra-source-files: CHANGELOG.md

executable frontend
    main-is:          Main.hs

    build-depends:    base ^>=4.15.0.0
                    , binary
                    , binary-instances
                    , hedis
                    , threads-supervisor
                    , stm
                    , bytestring
                    , mtl
                    , base16-bytestring
                    , uuid
                    , time
                    , tracing
                    , string-conversions
                    , random
                    , unliftio
                    , exceptions
                    , clock
                    , formatting
                    , aeson
                    , log-base
                    , log-elasticsearch
                    , text
                    , wreq
                    , lens
                    , lens-aeson
                    , aeson
                    , containers
                    , case-insensitive

    hs-source-dirs:   app
    default-language: Haskell2010
